--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation 'androidx.room:room-paging:2.5.1'
     implementation 'androidx.room:room-ktx:2.5.1'
     kapt 'androidx.room:room-compiler:2.5.1'
+    //Location
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     // Test Dependencies
     testImplementation 'junit:junit:4.13.2'
